# FW

backend/: database.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py
backend/db/: database.py
backend/model/: tables.py
backend/routers/: routes.py
backend/schemas/: data.py
